--- a/OneDrive/Documentos/Noveno cuatri/Majo/Practica/index.html
+++ b/OneDrive/Documentos/Noveno cuatri/Majo/Practica/index.html
@@ -74,7 +74,7 @@
       }
 
       .btn-bd-primary {
-        --bd-violet-bg: #946f25;
+        --bd-violet-bg: #2e9425;
         --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
 
         --bs-btn-font-weight: 600;
